Fix missing spacing fallbacks When we added the `--spacing` vars, we should always add fallbacks, as the components should work without them being defined. A few were missed.

--- a/packages/components/src/components/actions/action.css
+++ b/packages/components/src/components/actions/action.css
@@ -4,7 +4,7 @@
     & > c2-button,
     & > c2-button-link {
         --current-color: var(--color-shade-60);
-        --spacing: var(--spacing-1);
+        --spacing: var(--spacing-1, 8px);
         --height: 32px;
 
         &[disabled] {
@@ -19,7 +19,7 @@
         --border-radius: 0;
         --align-inner: flex-start;
         --height: 46px;
-        --spacing: var(--spacing-1_5);
+        --spacing: var(--spacing-1_5, 12px);
         width: 100%;
 
         &::part(button),
