--- a/packages/fields/src/demos/templated-form/templated-form.css
+++ b/packages/fields/src/demos/templated-form/templated-form.css
@@ -9,5 +9,5 @@
 
 form {
     display: block;
-    padding: var(--spacing-2);
+    padding: var(--spacing-2, 16px);
 }
